<resources>
    <string name="app_name">KotlinConf 2019</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_speakers">Speakers</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_map">Map</string>
    <string name="live_now">LIVE NOW</string>
    <string name="don_t_miss">DON\'T MISS</string>
    <string name="tweet_title">#KOTLINCONF</string>
    <string name="partners_title">PARTNERS</string>
    <string name="privacy_description"><![CDATA[ To get the full benefit out of this app we need to agree to our <font color="#FF0000">privacy policy</font>.
        This states that you are ok with us accessing your device id to track your votes and to store your favorites.
        Nothing more though.
        ]]>
    </string>
</resources>
