<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:iconTint="@color/redOrange"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_speakers"
        android:icon="@drawable/ic_home_black_24dp"
        android:iconTint="@color/blueSky"
        android:title="@string/title_speakers" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_home_black_24dp"
        android:iconTint="@color/redOrange"
        android:title="@string/title_schedule" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_home_black_24dp"
        android:iconTint="@color/blueSky"
        android:title="@string/title_map" />

</menu>
