<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/dark_grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/live_title"
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/druk_font"
                android:text="@string/live_now"
                android:textColor="@color/red_orange"
                android:textSize="80sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/live_cards_container"
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/live_title"/>

            <TextView
                android:id="@+id/dont_miss_title"
                android:layout_width="wrap_content"
                android:layout_height="90sp"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="47dp"
                android:fontFamily="@font/druk_font"
                android:text="@string/don_t_miss"
                android:textColor="@color/white"
                android:textSize="80sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/live_cards_container"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dont_miss_block"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/dont_miss_title"/>

            <TextView
                android:id="@+id/tweet_title"
                android:layout_width="wrap_content"
                android:layout_height="90sp"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="105dp"
                android:fontFamily="@font/druk_font"
                android:text="@string/tweet_title"
                android:textColor="@color/white"
                android:textSize="80sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dont_miss_block"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tweet_feed_list"
                android:layout_width="match_parent"
                android:layout_height="440dp"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tweet_title"/>

            <TextView
                android:id="@+id/partners_title"
                android:layout_width="wrap_content"
                android:layout_height="90sp"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/druk_font"
                android:text="@string/partners_title"
                android:textColor="@color/white"
                android:textSize="80sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tweet_feed_list"/>

            <TextView
                android:id="@+id/partners_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="77dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="sans-serif"
                android:gravity="end"
                android:lineSpacingExtra="9sp"
                android:textColor="@color/red_orange"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tweet_feed_list"
                tools:text="See All"/>

            <HorizontalScrollView
                android:id="@+id/partners_view"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/partners_title">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>